Add Transformer AED for g2p
Signed-off-by: Advait Dhopeshwarkar <advait.d@Advaits-MacBook-Air.local>

--- a/g2p.ipynb
+++ b/g2p.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 86,
    "id": "d6a2310a-641e-498f-a661-a8fc53d90ec0",
    "metadata": {},
    "outputs": [],
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 87,
    "id": "8b871ef8-7292-4e07-a998-c110d9f3e807",
    "metadata": {},
    "outputs": [],
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 88,
    "id": "8a002baf-5015-48db-a5cc-a6714e6a42f9",
    "metadata": {},
    "outputs": [],
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 89,
    "id": "2c087060-79e2-4f36-a1c9-49f17e8404d7",
    "metadata": {},
    "outputs": [],
@@ -93,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 90,
    "id": "c0d1a954-437d-4d58-a366-7cab256e20c2",
    "metadata": {},
    "outputs": [],
@@ -105,47 +105,99 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 91,
    "id": "fb9eefac-d939-456b-b7b3-8094b1e110aa",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "87"
+      ]
+     },
+     "execution_count": 91,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "output_size"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 92,
    "id": "ff377307-589b-4096-91da-5c9f74ecabb6",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[[26, 1, 14, 20, 19],\n",
+       " [26, 2, 0, 20, 18, 4],\n",
+       " [26, 2, 14, 20, 17, 18, 4],\n",
+       " [26, 2, 20, 18, 4],\n",
+       " [26, 4, 12]]"
+      ]
+     },
+     "execution_count": 92,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "word_tokens[:5]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 93,
    "id": "3cb32cf2-992c-4bf0-9954-af81c238c730",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[[84, 24, 18, 69, 85],\n",
+       " [84, 52, 9, 82, 85],\n",
+       " [84, 52, 14, 66, 67, 85],\n",
+       " [84, 52, 81, 77, 82, 85],\n",
+       " [84, 9, 54, 85]]"
+      ]
+     },
+     "execution_count": 93,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "phone_tokens[:5]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 94,
    "id": "203da942-f205-446d-be2b-04d73cc7dd86",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(135167, 135167)"
+      ]
+     },
+     "execution_count": 94,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "len(word_tokens), len(phone_tokens)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 95,
    "id": "baeb222b-a027-4948-b4ee-60461fcb273a",
    "metadata": {},
    "outputs": [],
@@ -157,12 +209,21 @@
     "import heapq\n",
     "from torch.utils.data import Dataset, DataLoader\n",
     "from torch.nn.utils.rnn import pad_sequence\n",
-    "from tqdm import tqdm"
+    "from tqdm import tqdm\n",
+    "import math"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7cec8e1f",
+   "metadata": {},
+   "source": [
+    "# BiLSTM"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 157,
+   "execution_count": 96,
    "id": "e2144fab",
    "metadata": {},
    "outputs": [],
@@ -269,7 +330,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 145,
+   "execution_count": 97,
    "id": "442bcb18",
    "metadata": {},
    "outputs": [],
@@ -298,7 +359,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 98,
    "id": "4169286b",
    "metadata": {},
    "outputs": [],
@@ -310,7 +371,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 99,
    "id": "c738df1a",
    "metadata": {},
    "outputs": [
@@ -318,14 +379,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Loss: 1.1111: 100%|#########################| 4224/4224 [04:22<00:00, 16.35it/s]"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Loss: 1.1111: 100%|#########################| 4224/4224 [04:36<00:00, 16.35it/s]"
+      "Loss: 1.1764: 100%|#########################| 4224/4224 [04:44<00:00, 14.21it/s]"
      ]
     }
    ],
@@ -339,22 +393,17 @@
     "\n",
     "for epoch in range(num_epochs):\n",
     "    for word_batch, phone_batch in dataloader:\n",
-    "        # Assuming word_batch and phone_batch are already padded\n",
     "        word_batch = word_batch.to(device)\n",
     "        phone_batch = phone_batch.to(device)\n",
-    "        # Forward pass\n",
     "        outputs = model(word_batch, phone_batch)\n",
     "\n",
-    "        # Reshape outputs and targets for the loss function\n",
-    "        outputs = outputs[1:].view(-1, outputs.shape[-1])\n",
-    "        phone_batch = phone_batch[1:].view(-1)\n",
+    "        outputs = outputs.view(-1, outputs.shape[-1])\n",
+    "        phone_batch = phone_batch.view(-1)\n",
     "\n",
-    "        # Compute the loss\n",
     "        loss = criterion(outputs, phone_batch)\n",
     "\n",
     "        pbar.set_description(f\"Loss: {loss.item():.4f}\")\n",
     "        pbar.update(1)\n",
-    "        # Backward pass and optimization\n",
     "        optimizer.zero_grad()\n",
     "        loss.backward()\n",
     "        optimizer.step()\n"
@@ -362,7 +411,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 163,
+   "execution_count": 101,
    "id": "4d56deba",
    "metadata": {},
    "outputs": [
@@ -370,7 +419,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['P', 'R', 'IY0', 'Z', 'IH1', 'D', 'AH0', 'N', 'T']\n"
+      "['P', 'R', 'IY0', 'S', 'AY1', 'D', 'AH0', 'N', 'T']\n"
      ]
     }
    ],
@@ -382,6 +431,243 @@
     "phones = [idx2ph[tok] for tok in phone_tokens][:-1]\n",
     "print(phones)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a5712349",
+   "metadata": {},
+   "source": [
+    "# Transformer"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 79,
+   "id": "d194c1e2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class PositionalEncoding(nn.Module):\n",
+    "    def __init__(self, d_model, max_len=5000, dropout=0.1):\n",
+    "        super(PositionalEncoding, self).__init__()\n",
+    "        self.dropout = nn.Dropout(p=dropout)\n",
+    "\n",
+    "        pe = torch.zeros(max_len, d_model)\n",
+    "        position = torch.arange(0, max_len, dtype=torch.float).unsqueeze(1)\n",
+    "        div_term = torch.exp(torch.arange(0, d_model, 2).float() * (-math.log(10000.0) / d_model))\n",
+    "\n",
+    "        pe[:, 0::2] = torch.sin(position * div_term)\n",
+    "        pe[:, 1::2] = torch.cos(position * div_term)\n",
+    "        \n",
+    "        pe = pe.unsqueeze(0)\n",
+    "        self.register_buffer('pe', pe)\n",
+    "\n",
+    "    def forward(self, x):\n",
+    "        x = x + self.pe[:, :x.size(1)]\n",
+    "        return self.dropout(x)\n",
+    "\n",
+    "class TransformerEncoder(nn.Module):\n",
+    "    def __init__(self, input_size, hidden_size, nhead=4, num_layers=2, dropout=0.1):\n",
+    "        super(TransformerEncoder, self).__init__()\n",
+    "        self.embedding = nn.Embedding(input_size, hidden_size)\n",
+    "        self.positional_encoding = PositionalEncoding(hidden_size, dropout=dropout)\n",
+    "        encoder_layer = nn.TransformerEncoderLayer(\n",
+    "            d_model=hidden_size,\n",
+    "            nhead=nhead,\n",
+    "            dim_feedforward=hidden_size * 4,\n",
+    "            dropout=dropout,\n",
+    "            batch_first=True\n",
+    "        )\n",
+    "        self.transformer = nn.TransformerEncoder(encoder_layer, num_layers)\n",
+    "        \n",
+    "    def forward(self, src, src_mask=None):\n",
+    "        embedded = self.embedding(src)\n",
+    "        embedded = self.positional_encoding(embedded)\n",
+    "        output =  self.transformer(embedded, src_mask)\n",
+    "        return output\n",
+    "    \n",
+    "\n",
+    "class TransformerDecoder(nn.Module):\n",
+    "    def __init__(self, output_size, hidden_size, nhead=4, num_layers=2, dropout=0.1):\n",
+    "        super(TransformerDecoder, self).__init__()\n",
+    "        self.embedding = nn.Embedding(output_size, hidden_size)\n",
+    "        self.positional_encoding = PositionalEncoding(hidden_size, dropout=dropout)\n",
+    "        decoder_layer = nn.TransformerDecoderLayer(\n",
+    "            d_model=hidden_size,\n",
+    "            nhead=nhead,\n",
+    "            dim_feedforward=hidden_size * 4,\n",
+    "            dropout=dropout,\n",
+    "            batch_first=True\n",
+    "        )\n",
+    "        self.transformer = nn.TransformerDecoder(decoder_layer, num_layers)\n",
+    "        self.fc = nn.Linear(hidden_size, output_size)\n",
+    "        \n",
+    "    def forward(self, tgt, memory, tgt_mask=None, memory_mask=None):\n",
+    "        embedded = self.embedding(tgt)\n",
+    "        embedded = self.positional_encoding(embedded)\n",
+    "        output = self.transformer(embedded, memory, tgt_mask, memory_mask)\n",
+    "        output = self.fc(output)\n",
+    "        return output\n",
+    "    \n",
+    "class TransformerSeq2Seq(nn.Module):\n",
+    "    def __init__(self, encoder, decoder):\n",
+    "        super(TransformerSeq2Seq, self).__init__()\n",
+    "        self.encoder = encoder\n",
+    "        self.decoder = decoder\n",
+    "        \n",
+    "    def generate_square_subsequent_mask(self, sz, device):\n",
+    "        mask = (torch.triu(torch.ones(sz, sz)) == 1).transpose(0, 1)\n",
+    "        mask = mask.float().masked_fill(mask == 0, float('-inf')).masked_fill(mask == 1, float(0.0))\n",
+    "        return mask.to(device)\n",
+    "\n",
+    "    def forward(self, src, tgt, teacher_forcing_ratio=1.0, device='cpu'):\n",
+    "        tgt_mask = self.generate_square_subsequent_mask(tgt.shape[1], device)\n",
+    "        \n",
+    "        encoder_output = self.encoder(src)\n",
+    "        output = self.decoder(tgt, encoder_output, tgt_mask)\n",
+    "\n",
+    "        return output\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 80,
+   "id": "5f1a4db8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "encoder = TransformerEncoder(input_size, hidden_size=128)\n",
+    "decoder = TransformerDecoder(output_size, hidden_size=128)\n",
+    "model = TransformerSeq2Seq(encoder, decoder)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 81,
+   "id": "bde12b12",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Loss: 0.5525: 100%|########################9| 4223/4224 [02:09<00:00, 32.22it/s]"
+     ]
+    }
+   ],
+   "source": [
+    "criterion = nn.CrossEntropyLoss(ignore_index=ph2idx[pad_token])\n",
+    "optimizer = torch.optim.Adam(model.parameters(), lr=0.001)\n",
+    "num_epochs = 1\n",
+    "device = 'cpu'\n",
+    "\n",
+    "pbar =  tqdm(total=num_epochs * len(dataloader), desc=\"Epochs\", leave=False, position=0, ascii=True)\n",
+    "\n",
+    "for epoch in range(num_epochs):\n",
+    "    for word_batch, phone_batch in dataloader:\n",
+    "        word_batch = word_batch.to(device)\n",
+    "        phone_batch = phone_batch.to(device)\n",
+    "        outputs = model(word_batch, phone_batch)\n",
+    "\n",
+    "        outputs = outputs[:, :-1, :].contiguous()\n",
+    "        phone_batch = phone_batch[:, 1:].contiguous()\n",
+    "\n",
+    "        outputs = outputs.view(-1, outputs.shape[-1])\n",
+    "        phone_batch = phone_batch.view(-1)\n",
+    "\n",
+    "        loss = criterion(outputs, phone_batch)\n",
+    "\n",
+    "        pbar.set_description(f\"Loss: {loss.item():.4f}\")\n",
+    "        pbar.update(1)\n",
+    "        optimizer.zero_grad()\n",
+    "        loss.backward()\n",
+    "        optimizer.step()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 82,
+   "id": "e864e317",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def beam_search_decode(model, src, beam_width=5, max_len=50, device='cpu'):\n",
+    "    model.eval()\n",
+    "    with torch.no_grad():\n",
+    "        src = src.to(device)\n",
+    "        encoder_output = model.encoder(src)\n",
+    "        \n",
+    "        beams = [(0, torch.tensor([[ph2idx[sos_token]]], device=device))]\n",
+    "        \n",
+    "        for _ in range(max_len - 1):\n",
+    "            new_beams = []\n",
+    "            \n",
+    "            for score, sequence in beams:\n",
+    "                if sequence[0, -1].item() == ph2idx[eos_token]:\n",
+    "                    new_beams.append((score, sequence))\n",
+    "                    continue\n",
+    "                \n",
+    "                tgt_mask = model.generate_square_subsequent_mask(sequence.size(1), device)\n",
+    "                \n",
+    "                output = model.decoder(sequence, encoder_output, tgt_mask)\n",
+    "                \n",
+    "                log_probs = F.log_softmax(output[:, -1:], dim=-1)\n",
+    "\n",
+    "                values, indices = log_probs.squeeze().topk(beam_width)\n",
+    "                \n",
+    "                for value, idx in zip(values, indices):\n",
+    "                    new_score = score + value.item()\n",
+    "                    new_sequence = torch.cat([sequence, \n",
+    "                                           idx.unsqueeze(0).unsqueeze(0)], dim=1)\n",
+    "                    new_beams.append((new_score, new_sequence))\n",
+    "            \n",
+    "            beams = sorted(new_beams, key=lambda x: x[0], reverse=True)[:beam_width]\n",
+    "            \n",
+    "            if all(beam[1][0, -1].item() == ph2idx[eos_token] for beam in beams):\n",
+    "                break\n",
+    "        \n",
+    "        return beams[0][1].squeeze(0).cpu().numpy()\n",
+    "\n",
+    "def predict_pronunciation(model, word, beam_width=5, device='cpu'):\n",
+    "    word_tokens = torch.tensor([[chr2idx[c] for c in word.lower() if c in chr2idx]], \n",
+    "                             device=device)\n",
+    "    \n",
+    "    phone_tokens = beam_search_decode(model, word_tokens, beam_width=beam_width, device=device)\n",
+    "    phones = [idx2ph[idx] for idx in phone_tokens]\n",
+    "    \n",
+    "    phones = [p for p in phones if p not in [sos_token, eos_token, pad_token]]\n",
+    "    \n",
+    "    return phones"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 84,
+   "id": "9a60014f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['P', 'R', 'IY0', 'Z', 'AY1', 'D', 'AH0', 'N', 'T']"
+      ]
+     },
+     "execution_count": 84,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "predict_pronunciation(model, \"president\", beam_width=5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0fb94437",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
